--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} --transpileOnly prisma/seed.ts"
+  },
   "dependencies": {
     "@next/font": "13.1.6",
     "@prisma/client": "^4.9.0",
@@ -20,6 +23,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "typescript": "4.9.5"
   },
   "devDependencies": {
