--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
